Update install_fedora.md